avcodec_default_get_buffer: init picture parameters.

Fixes multithreading regression introduced in 64c06615d2b99fb9f4ffd6226d0e5787b44a41e2
Fixes ticket197
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>